--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ footer p {
   flex-direction: column;
   align-items: center;
   gap: 3rem;
+  text-align: center;
 }
 .header__description h1 {
   font-size: 3rem;
